Sorgente/.apex/src/objects/Parametro__c.object
<CustomObject>
    <fields>
        <fullName>Descrizione_ENG__c</fullName>
        <label>Descrizione ENG</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Descrizione_ITA__c</fullName>
        <label>Descrizione ITA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Immagine_Illustrazione__c</fullName>
        <label>Immagine/Illustrazione</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Macrocategoria__c</fullName>
        <label>Macrocategoria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gene</fullName>
                </value>
                <value>
                    <fullName>Chimico</fullName>
                </value>
                <value>
                    <fullName>Citogenetico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_di_misura__c</fullName>
        <label>Unità di misura</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Numero</fullName>
                </value>
                <value>
                    <fullName>mg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Parametro</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tutto</label>
    </listViews>
    <nameField>
        <label>Nome Parametro</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parametri</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>